# siege

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  README_CN.md  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: tauri-build.yml
__tests__/api/: reviews.test.ts  test-suites.test.ts
__tests__/components/: markdown-renderer.test.tsx
__tests__/lib/: import.test.ts
__tests__/lib/db/: schema.test.ts
docs/superpowers/plans/: 2026-03-26-tauri-desktop.md  2026-03-28-tailscale-remote-execution.md
scripts/: build-static.sh  take-screenshots.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/ai/: acp.rs  anthropic.rs  config.rs  mod.rs  openai.rs  streaming.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/remote/: mod.rs  remote_acp.rs  ssh.rs  tailscale.rs
src-tauri/src/routes/: ai_config.rs  archive.rs  backup.rs  execute.rs  filesystem.rs  git.rs  github.rs  import.rs  memories.rs  mod.rs  plan_folders.rs  plans.rs  projects.rs  review_comments.rs  review_items.rs  reviews.rs  rollback.rs  schedule_items.rs  schedules.rs  schemes.rs  settings.rs  snapshots.rs  tailscale.rs  test_cases.rs  test_suites.rs
src-tauri/src/utils/: git.rs  process.rs
src/app/: globals.css  layout.tsx
src/app/[locale]/: page.tsx  (+3 more)
src/i18n/: request.ts
src/lib/: api.ts  archive.ts  errors.ts  open-external.ts  recent-projects.ts  scheme-types.ts
src/messages/: en.json  zh.json
(+159 files in other folders)
